updated some docs

--- a/template_pkg_interfaces/package.xml
+++ b/template_pkg_interfaces/package.xml
@@ -4,8 +4,8 @@
   <name>template_pkg_interfaces</name>
   <version>0.1.0</version>
   <description>template_pkg interface definitions</description>
-  <maintainer email="kris@todo.com">Kristopher kkrasnosky</maintainer>
-  <license>Apache 2.0</license>
+  <maintainer email="me@todo.com">@todo</maintainer>
+  <license>@todo</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
