--- a/template_pkg/package.xml
+++ b/template_pkg/package.xml
@@ -4,12 +4,12 @@
   <name>template_pkg</name>
   <version>1.0.0</version>
   <description>A Template ROS2 Package </description>
-  <maintainer email="kris@todo.com">Kristopher kkrasnosky</maintainer>
-  <license>Apache 2.0</license>
+  <maintainer email="me@todo.com">@todo</maintainer>
+  <license>@todo</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <depend> acoustic_msgs </depend>
+  <depend> template_pkg_interfaces </depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
